Fix spacing on login textfields

--- a/services/client/src/components/pages/login/LoginPage.module.scss
+++ b/services/client/src/components/pages/login/LoginPage.module.scss
@@ -51,8 +51,8 @@ $bg-img: url('../../../assets/login_register_bg.png');
     text-decoration: none;
   }
   .email{
-    margin-bottom: 3.84375rem;
-    height:2.25rem;
+    margin-bottom: 1.84375rem;
+    height: 2.25rem;
   }
   .password{
     margin-bottom: 1.625rem;
